# auto-train-ros

./: CMakeLists.txt  package.xml
action/: AutoTrain.action
scripts/: autotrain_action_client.py  autotrain_action_server.py
source/: auto_train.py  available_cam.py  new_data.py  roboflow_bb.py  utils_aug.py
